--- a/html/productos3.html
+++ b/html/productos3.html
@@ -7,10 +7,10 @@
     <!-- iconos-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <!-- css-->
-     <link rel="stylesheet" href="/css/bootstrap.min.css">
-     <link rel="stylesheet" href="/css/templatemo.css">
-     <link rel="stylesheet" href="/css/custom.css">
-     <link rel="stylesheet" href="/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/templatemo.css">
+    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/fontawesome.min.css">
 </head>
 <body>
         <!-- inicio encabezado-->
@@ -34,7 +34,7 @@
         </nav>
         <!-- fin encabezado-->
         <!-- inicio menu-->
-         <nav class="navbar navbar-expand-lg navbar-light shadow">
+        <nav class="navbar navbar-expand-lg navbar-light shadow">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,7 +45,7 @@
                 <div class="align-self-center collapse navbar-collapse flex-fill d-lg-flex justify-content-lg-between" id="opciones">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="productos.html">Productos</a>
