--- a/html/productos.html
+++ b/html/productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProdArt- Productos</title>
+    <title>Productos</title>
     <!-- iconos-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
@@ -20,7 +20,7 @@
                 <div class="w-100 d-flex justify-content-between">
                     <div>
                         <i class="fa fa-envelope mx-2"></i>
-                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                        <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@prodart.com">info@artesanal.com</a>
                         <i class="fa fa-phone mx-2"></i>
                         <a class="navbar-sm-brand text-light text-decoration-none" href="tel: 057-320-202-02-02">057-320-202-02-02</a>
                     </div>
@@ -38,9 +38,8 @@
         <nav class="navbar navbar-expand-lg navbar-light shadow">
             <div class="container d-flex justify-content-between align-items-center">
     
-                <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
-                    ProdArt
-                </a>  
+                <a class="logo" href="index.html"><img src="/img/artesanal.svg" alt="logo artesanal" style="width: 250px;"></a>
+                
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#templatemo_main_nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -238,7 +237,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light log">ProdArt</h2>
+                    <h2 class="h2 text-success border-bottom pb-3 border-light log">Artesanal</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
@@ -251,7 +250,7 @@
                         </li>
                         <li>
                             <i class="fa fa-envelope mx-2"></i>
-                            <a class="text-decoration-none" href="mailto:info@prodart.com">info@prodart.com</a>
+                            <a class="text-decoration-none" href="mailto:info@prodart.com">info@artesanal.com</a>
                         </li>
                     </ul>
                 </div>
@@ -260,18 +259,15 @@
                     <ul class="list-unstyled text-light footer-link-list">
                         <li><a class="text-decoration-none" href="compras.html">Sombreros</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Hamacas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Platería</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Bolsos</a></li>
                         <li><a class="text-decoration-none" href="compras.html">Mochilas</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Tapetes</a></li>
+                        <li><a class="text-decoration-none" href="compras.html">Accesorios</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-5">
                     <h2 class="h2 text-light border-bottom pb-3 border-light">Mas información</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li><a class="text-decoration-none" href="index.html">Home</a></li>
-                        <li><a class="text-decoration-none" href="acercade.html">A cerca de</a></li>
-                        <li><a class="text-decoration-none" href="compras.html">Compras</a></li>
                         <li><a class="text-decoration-none" href="productos.html">Productos</a></li>
                         <li><a class="text-decoration-none" href="contacto.html">Contacto</a></li>
                     </ul>
@@ -311,7 +307,7 @@
             <div class="container">
                 <div class="row pt-2">
                     <p class="text-left text-light">
-                        Copyright &copy; 2024 - ProdArt | Diseñado por: Pablo Carr
+                        Copyright &copy; 2024 - Artesanal
                     </p>
                 </div>
             </div>
