Cambio de Titutlo en la ventana principal

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Ventas de productos artesanales" content= "Sombreros,Mochilas,Hamacas,Bolsos." >
-    <title>ProdArt</title>
+    <title>Artesanal</title>
     <!-- iconos-->
     <!-- <link rel="apple-touch-icon" href="/css/"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
