--- a/html/compras.html
+++ b/html/compras.html
@@ -50,7 +50,7 @@
                                 <a class="nav-link" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="productos.html">Productos</a>
+                                <a class="nav-link" href="compras.html">Compras</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="productos.html">Productos</a>
